tests/ui/consts/nested_erroneous_ctfe.rs
fn main() {
    [9; || [9; []]];
    //~^ ERROR: mismatched types
    //~| ERROR: mismatched types
}
